Fixed modal shadow and contact icons on mobile

--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -6,13 +6,6 @@ section#contact {
   @include media('<=phone') {
     height: 35vh;
   }
-  &:nth-child(4) {
-    svg {
-      @include media('<=phone') {
-        width: 6vw;
-      }
-    }
-  }
   a {
     text-decoration: none;
     color: $dark;
