--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -22,7 +22,6 @@
   padding: 1em;
   font-weight: 200;
   text-align: left;
-  box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.8);
   .modal-heading {
     width: 100%;
     display: flex;
